--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 .android {
     width: 300px;
+    position: relative;
+    right: 240px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -224,5 +226,15 @@ body {
     display: flex;
     justify-content: center;
 
+}
+
+.title {
+    font-family: 'Patua One', serif;
+    font-size: 50px;
+    color: #ef8308;
+    text-align: center;
+    position: relative;
+    top: 70px;
+    left: 130px;
 }
 
